# alpharank

./: .gitignore  AGENT.md  KPI_AUDIT_REPORT.md  README.md  backtest_report.html  check_legacy_extreme.py  check_returns.py  environment.yml  financial_comparison_report.html  optuna_report.html  pyproject.toml  real_financial_report.html  requirements.txt
docs/: CODEX_HANDOFF.md  backtest_feature_reference.md  open_source_cadrage_status_2025.md  open_source_ingestion_architecture.md
experiments/: backtest_sp500.py  check_aggregation.py  example_regression_usage.py  old_strat.py  run_optimize_and_simulate.py  run_stability_yearly.py  test.py  test_new_optim.py  test_volatility_penalty.py  testtest.py  verify_ratios.py
outputs/: kpi_report_last_portfolio.html  legacy_returns.csv
scripts/: audit_data_lineage.py  backtest_data_source_examples.py  benchmark_legacy_backends.py  compare_legacy_eodhd_vs_open_source.py  compare_legacy_input_ablation.py  download_data.py  generate_financial_report.py  portfolio_allocation.py  run_backtest.py  run_backtest_application.py  run_backtest_open_source_prices.py  run_boosting_vs_legacy.py  run_full_backtest.py  run_legacy.py  setup_conda_env.sh  sync_eodhd_output.py
tests/: test_backtest_application.py  test_backtest_data_loading.py  test_backtest_data_source.py  test_backtest_debug_exports.py  test_backtest_exclusions.py  test_backtest_explainability.py  test_backtest_features.py  test_backtest_fundamentals.py  test_backtest_reporting.py  test_backtest_target.py  test_full_backtest.py  test_open_source_benchmark.py  test_open_source_consolidation.py  test_open_source_earnings.py  test_open_source_financial_audit.py  test_open_source_legacy_export.py  test_open_source_nightly.py  test_open_source_price_fallback.py  test_open_source_publishing.py  test_open_source_reference_dir.py  test_open_source_storage.py  test_open_source_yahoo.py  test_portfolio_agg.py  (+9 more)
(+116 files in other folders)
