[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpharank"
version = "0.1.0"
description = "AlphaRank: legacy production strategy + boosting experimentation pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "polars>=1.0",
  "pyarrow>=16.0",
  "xgboost>=1.7",
  "optuna>=3.0",
  "shap>=0.41",
  "matplotlib>=3.7",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "seaborn>=0.12",
  "plotly>=5.0",
  "tqdm>=4.65",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6",
  "mypy>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["alpharank*"]
exclude = ["_old*"]
